# skeletal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: build.yml
rsc/: resize.frag
src/: arg.hpp  debug.cpp  debug.hpp  dsu.hpp  indexer.hpp  main.cpp  marcher.cpp  marcher.hpp  mesh.cpp  mesh.hpp  resizer.hpp  silhouette.hpp  type.hpp
